--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,9 +26,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 28
-    packagingOptions {
-        exclude 'META-INF / proguard / androidx-annotations.pro'
-    }
+    
     lintOptions {
         disable 'InvalidPackage'
     }
@@ -49,6 +47,9 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
+    }
+     packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
     }
 
     aaptOptions {
