--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,8 +49,15 @@ android {
         }
     }
      packagingOptions {
-        exclude 'META-INF/proguard/androidx-annotations.pro'
-    }
+    exclude 'META-INF/proguard/androidx-annotations.pro'
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/license.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/notice.txt'
+    exclude 'META-INF/ASL2.0'    }
 
     aaptOptions {
         noCompress 'tflite'
